
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "mask_fingerprint"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
png         = "0.18"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
